# hdbe

./: README.md
examples/: Makefile  ex.mak
examples/binary_search/: binary_search.c  binary_search.h
examples/binary_search/verilator/: CMakeLists.txt  sim_main.cpp
examples/counter/: counter.c
examples/counter/verilator/: CMakeLists.txt  sim_main.cpp
examples/ctrlflow/: ctrlflow.c  ctrlflow.h
examples/ctrlflow/verilator/: CMakeLists.txt  sim_main.cpp
examples/fir/: fir.c
examples/fir/verilator/: CMakeLists.txt  sim_main.cpp
examples/input_array/: input_array.c  input_array.h
examples/input_array/verilator/: CMakeLists.txt  sim_main.cpp
examples/loop/: loop.c  loop.h
examples/loop/verilator/: CMakeLists.txt  sim_main.cpp
examples/memport/: memport.c  memport.h
examples/memport/verilator/: CMakeLists.txt  sim_main.cpp
examples/packetparse/: packetparse.c  packetparse.h
examples/packetparse/verilator/: CMakeLists.txt  sim_main.cpp
examples/rgb2yuv/: log.txt  rgb2yuv.c  rgb2yuv.h
examples/rgb2yuv/verilator/: CMakeLists.txt  sim_main.cpp
examples/rgb2yuv_14/: rgb2yuv_14.c  rgb2yuv_14.h
examples/rgb2yuv_14/verilator/: CMakeLists.txt  sim_main.cpp
examples/shiftreg/: shiftreg.c  shiftreg.h
examples/shiftreg/verilator/: CMakeLists.txt  sim_main.cpp
examples/sorter/: HWDesc.yml  sorter.c  sorter.h
examples/sorter/verilator/: CMakeLists.txt  sim_main.cpp
examples/stack/: stack.c  stack.h
examples/stack/verilator/: CMakeLists.txt  sim_main.cpp
examples/vector_add/: vector_add.c  vector_add.h
examples/vector_add/verilator/: CMakeLists.txt  sim_main.cpp
experiments/: CMakeLists.txt  genll.sh  ir_parser.cpp  myfunc.c
experiments/veri/: CMakeLists.txt  sim_main.cpp
hdbe/: CMakeLists.txt  hdbe.cpp
hdl_lib/tcl/: synth_xil.tcl
hdl_lib/verilog/: BinaryOp.sv  CastOp.sv  DataMux.sv  Memory.sv  MemoryAddrMux.sv  Opcodes.sv  PHINodeOp.sv  icmpOp.sv  loadOp.sv  selectOp.sv
src/: BaseClass.hpp  CMakeLists.txt  CodeGenerator.hpp  ControlDataInfo.cpp  ControlDataInfo.hpp  ControlStep.hpp  DataAnalyzer.cpp  DataAnalyzer.hpp  DependenceInfo.hpp  HDLUtil.cpp  HDLUtil.hpp  HardwareDescription.cpp  HardwareDescription.hpp  HdlObject.hpp  HdlState.hpp  IRPreprocessor.cpp  IRPreprocessor.hpp  IRUtil.cpp  IRUtil.hpp  InstructionScheduler.cpp  InstructionScheduler.hpp  OSPrint.cpp  OSPrint.hpp  Scheduler.hpp  SchedulingAlgorithm.cpp  ValueLifeInfo.cpp  ValueLifeInfo.hpp  VerilogGenerator.cpp  VerilogTemplate.hpp  VhdlGenerator.cpp  VhdlTemplate.hpp  hdbe.cpp  scratch.cpp  types.hpp
src/logging/: logger.cpp  logger.hpp
src/scratch/: scratch.cpp
